# rustentia

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  database.rs  deck.rs  flashcard.rs  lib.rs  main.rs
src/ui/: conditional.rs  static_ui.rs  style.rs
