[package]
name = "rustentia"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Flashcards app using egui and rusqlite."
homepage = "https://github.com/laurnidev/rustentia"
repository = "https://github.com/laurnidev/rustentia"
readme = "README.md"
keywords = ["flashcards", "egui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21.0"
env_logger = "0.10"
rusqlite = { version = "0.29.0", features = ["bundled"] }
egui-notify = "0.6.0"
